Basically finish get,put,delete todos operation and http client part.

--- a/assignment3_client_14177256/nbproject/project.properties
+++ b/assignment3_client_14177256/nbproject/project.properties
@@ -1,5 +1,12 @@
 #Mon May 22 09:24:49 NZST 2017
 excludes=
+file.reference.commons-codec-1.6.jar=bin\\commons-codec-1.6.jar
+file.reference.commons-logging-1.1.1.jar=bin\\commons-logging-1.1.1.jar
+file.reference.fluent-hc-4.2.1.jar=bin\\fluent-hc-4.2.1.jar
+file.reference.httpclient-4.2.1.jar=bin\\httpclient-4.2.1.jar
+file.reference.httpclient-cache-4.2.1.jar=bin\\httpclient-cache-4.2.1.jar
+file.reference.httpcore-4.2.1.jar=bin\\httpcore-4.2.1.jar
+file.reference.httpmime-4.2.1.jar=bin\\httpmime-4.2.1.jar
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
 run.classpath=${javac.classpath}\:${build.classes.dir}
@@ -7,7 +14,6 @@ javadoc.nonavbar=false
 javac.external.vm=true
 run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-file.reference.httpclient-4.5.3.jar=bin\\httpcomponents-client-4.5.3\\lib\\httpclient-4.5.3.jar
 javac.processorpath=${javac.classpath}
 javac.target=1.8
 annotation.processing.processors.list=
@@ -55,7 +61,16 @@ annotation.processing.enabled=true
 dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
 mkdist.disabled=false
-javac.classpath=${file.reference.httpclient-4.5.3.jar}\:${file.reference.org.json.jar}\:${file.reference.junit-4.12.jar}
+javac.classpath=\
+    ${file.reference.org.json.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.commons-codec-1.6.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.fluent-hc-4.2.1.jar}:\
+    ${file.reference.httpclient-4.2.1.jar}:\
+    ${file.reference.httpclient-cache-4.2.1.jar}:\
+    ${file.reference.httpcore-4.2.1.jar}:\
+    ${file.reference.httpmime-4.2.1.jar}
 annotation.processing.enabled.in.editor=false
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
