--- a/assignment3_client_14177256/nbproject/project.properties
+++ b/assignment3_client_14177256/nbproject/project.properties
@@ -7,6 +7,7 @@ file.reference.httpclient-4.2.1.jar=bin\\httpclient-4.2.1.jar
 file.reference.httpclient-cache-4.2.1.jar=bin\\httpclient-cache-4.2.1.jar
 file.reference.httpcore-4.2.1.jar=bin\\httpcore-4.2.1.jar
 file.reference.httpmime-4.2.1.jar=bin\\httpmime-4.2.1.jar
+file.reference.jdom-2.0.6.jar=..\\assignment3_server_14177256\\web\\WEB-INF\\lib\\jdom-2.0.6\\jdom-2.0.6.jar
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
 run.classpath=${javac.classpath}\:${build.classes.dir}
@@ -70,7 +71,8 @@ javac.classpath=\
     ${file.reference.httpclient-4.2.1.jar}:\
     ${file.reference.httpclient-cache-4.2.1.jar}:\
     ${file.reference.httpcore-4.2.1.jar}:\
-    ${file.reference.httpmime-4.2.1.jar}
+    ${file.reference.httpmime-4.2.1.jar}:\
+    ${file.reference.jdom-2.0.6.jar}
 annotation.processing.enabled.in.editor=false
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
