--- a/assignment3_server_14177256/nbproject/project.properties
+++ b/assignment3_server_14177256/nbproject/project.properties
@@ -3,6 +3,13 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -29,6 +36,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.jdom-2.0.6.jar=web/WEB-INF/lib/jdom-2.0.6/jdom-2.0.6.jar
+file.reference.jquery-3.2.1.jar=web\\WEB-INF\\lib\\jquery-3.2.1.jar
 file.reference.org.json.jar=D:\\myNetBeanProject\\webtech-tutorial2-id14177256\\web\\WEB-INF\\lib\\org.json.jar
 includes=**
 j2ee.compile.on.save=true
@@ -40,7 +48,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.org.json.jar}:\
-    ${file.reference.jdom-2.0.6.jar}
+    ${file.reference.jdom-2.0.6.jar}:\
+    ${file.reference.jquery-3.2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
